--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
   "name": "nodejs-app",
   "version": "1.0.0",
+  "type":"module",
   "description": "A minimal Node.js web application.",
   "main": "app.js",
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.30.6",
+    "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
+    "postgres": "^3.3.4",
+    "telegraf": "^4.12.2",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/node-cron": "^3.0.11",
+    "drizzle-kit": "^0.20.14",
+    "nodemon": "^3.1.0",
+    "prettier": "^2.8.6",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.0.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node --import=tsx app.ts"
   }
 }
