--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-cron": "^3.0.3",
     "postgres": "^3.3.4",
     "telegraf": "^4.12.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node-cron": "^3.0.11",
