--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "nodejs-app",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "A minimal Node.js web application.",
   "main": "app.js",
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "drizzle-orm": "^0.30.6",
+    "express": "^4.19.2",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
     "postgres": "^3.3.4",
     "telegraf": "^4.12.2",
-    "zod": "^3.21.4",
-    "cors": "^2.8.5"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node-cron": "^3.0.11",
